--- a/app.yaml
+++ b/app.yaml
@@ -18,3 +18,12 @@ libraries:
   version: "2.5.2"
 - name: jinja2
   version: latest
+
+skip_files:
+- ^(.*/)?#.*#$
+- ^(.*/)?.*~$
+- ^(.*/)?.*\.py[co]$
+- ^(.*/)?.*/RCS/.*$
+- ^(.*/)?\..*$
+- ^bower_components/.*$
+- ^node_modules/.*$
