added basic api

--- a/app.yaml
+++ b/app.yaml
@@ -10,6 +10,8 @@ handlers:
 - url: /admin
   script: main.admin
   login: admin
+- url: /_ah/spi/.*
+  script: api.rol.APPLICATION
 - url: .*
   script: main.app
 
@@ -18,6 +20,8 @@ libraries:
   version: "2.5.2"
 - name: jinja2
   version: latest
+- name: endpoints
+  version: 1.0
 
 skip_files:
 - ^(.*/)?#.*#$
